force-app/main/default/objects/sims_Account_Address__c/sims_Account_Address__c.object-meta.xml
<CustomObject>
    <label>Account Address</label>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Account Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>