force-app/main/default/objects/sims_Account_Address__c/fields/sims_Account__c.field-meta.xml
<CustomField>
    <fullName>sims_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Addresses</relationshipLabel>
    <relationshipName>Account_Addresses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>