force-app/main/default/objects/sims_Account_Address__c/fields/sims_Address__c.field-meta.xml
<CustomField>
    <fullName>sims_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>