force-app/main/default/objects/sims_Account_Address__c/fields/sims_Primary__c.field-meta.xml
<CustomField>
    <fullName>sims_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>